# win-personal-shortcuts

./: .env.example  Cargo.toml  README.md  build.rs  win-personal-shortcuts.exe.manifest  win-personal-shortcuts.rc
src/: app_config.rs  input_handlers.rs  kb_events.rs  main.rs  notifications.rs  p_shortcuts_tray.rs
