[package]
name = "win-personal-shortcuts"
version = "0.2.1"
edition = "2021"
# Had to add this to get a custom icon for exe
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwg = {version = "^1.0.12", package = "native-windows-gui"}
nwd = {version = "^1.0.4", package = "native-windows-derive"}
inputbot = "0.5.0"
config = "0.11"
serde_derive = "^1.0.8"
serde = "^1.0.8"
dotenv = "0.15.0"
eyre = "0.6.5"

[build-dependencies]
embed-resource = "1.3"